--- a/ML-group-project/index.html
+++ b/ML-group-project/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <meta charset="UTF-8">
   <title>ML 840</title>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
-  
 </head>
 
 <body>
@@ -15,8 +9,8 @@
 	<h1>MNIST Classification</h1>
 
      <!-- Main Input For Receiving image to our ML -->
-    <form action="{{ url_for('predict')}}"method="post">
-		<input type="file" name="file" placeholder="file" required="required" />
+    <form enctype="multipart/form-data" action="{{ url_for('predict')}}"method="post">
+		<input type="file" id="file" required="required"/>
         <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
     </form>
 
